Wed Jul  6 18:34:21 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/iso_8859_16.c, test/ruby/enc/test_case_comprehensive.rb:
	  Implement non-ASCII case conversion for ISO-8859-16, by Satoshi Kayama.

Wed Jul  6 14:44:56 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): store $headers in LOCAL_HDRS for
	  depend files.

	* ext/digest/digest_conf.rb (digest_conf): add implementation
	  specific headers to $header.

	* ext/digest/{md5,rmd160,sha1,sha2}/depend: add LOCAL_HDRS to the
	  dependencies.

Wed Jul  6 08:59:35 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/http/generic_rquest.rb (write_header): A Request-Line must
	  not contain CR or LF.

Wed Jul  6 07:11:27 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (putline): raise an ArgumentError when
	  CR or LF is included in a line.

Tue Jul  5 20:49:30 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/json/*, test/json/*: Update json-2.0.1.
	  Changes of 2.0.0: https://github.com/flori/json/blob/f679ebd0c69a94e3e70a897ac9a229f5779c2ee1/CHANGES.md#2015-09-11-200
	  Changes of 2.0.1: https://github.com/flori/json/blob/f679ebd0c69a94e3e70a897ac9a229f5779c2ee1/CHANGES.md#2016-07-01-201
	  [Feature #12542][ruby-dev:49706][fix GH-1395]

Tue Jul  5 19:39:49 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* string.c (rb_str_change_terminator_length): New function to change
	  termlen and resize heap for the terminator. This is split from
	  rb_str_fill_terminator (str_fill_term) because filling terminator
	  and changing terminator length are different things. [Bug #12536]

	* internal.h: declaration for rb_str_change_terminator_length.

	* string.c (str_fill_term): Simplify only to zero-fill the terminator.
	  For non-shared strings, it assumes that (capa + termlen) bytes of
	  heap is allocated. This partially reverts r55557.

	* encoding.c (rb_enc_associate_index): rb_str_change_terminator_length